--- a/css/about.css
+++ b/css/about.css
@@ -3,134 +3,245 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
 }
+
 body {
-	line-height: 1;
+    line-height: 1;
 }
-ol, ul {
-	list-style: none;
+
+ol,
+ul {
+    list-style: none;
 }
-blockquote, q {
-	quotes: none;
+
+blockquote,
+q {
+    quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
-
+/* * {
+    border: 1px solid black !important ;
+} */
 body {
-    display: flex ;
-    justify-content: center ;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+    display: flex;
+    justify-content: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .container {
-    width: 800px ;
-    margin: 0 auto ;
+    width: 880px;
 }
 
 .jumbo-img {
-    margin: 5px 0 ;
-}
-.nav-flex {
-    display: flex ;
-    justify-content: space-between ;
-    align-content: flex-start ;
-}
-
-.header-flex {
-    display: flex ;
-    flex-direction: column ;
-    justify-content: center;
-    align-content: space-between ;
-
-}
-
-.img-flex {
-    display: flex ;
-    flex-direction: column ;
-    justify-content: space-between ;
-    width: 100% ;
-}
-.about-section {
-    width: 760px ;
-    display: flex ;
-    flex-direction: column ;
-    justify-content: space-around ;
-    align-content: center ;
-    margin: 5px 0 ;
-}
-.about-section h3 {
-    padding-bottom: 2px ;
-}
-
-.main-articles {
-    display: flex ;
-    flex-wrap: wrap ;
-    flex-direction: row ;
-    justify-content: space-around;
+    margin: 15px 5px;
     
 }
 
-.main-articles section {
-    display: flex ;
-    flex-direction: column ;
+.nav-flex {
+    display: flex;
+    justify-content: space-between;
+    align-content: flex-start;
+}
+
+.header-flex {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    width: 320px ;
+    align-content: space-between;
+}
+
+
+
+.img-flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.about-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-content: center;
+    margin: 5px 0;
+}
+
+.about-section h3 {
+    padding-bottom: 2px;
+}
+
+.main-articles {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    border-top: 1px dashed black;
+    border-bottom: 1px dashed black;
+    padding: 15px 0 ;
+}
+
+
+
+.main-articles h3 {
+    font-size: 20px;
+}
+
+.strategy {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-around;
+    width: 380px;
+    height: 380px;
 }
 
 .footer-flex {
-    display: flex;
-    flex-direction: row ;
-    flex-wrap: wrap ;
+    height: 80px ;
+    display: flex ;
+    flex-direction: column ;
+    justify-content: space-around ;
     margin-top: 10px ;
-    width: 720px ;
-    justify-content: center ;
 }
 
 button {
-    background: white ;
-    border: 1px solid black ;
-    border-radius: 10% ;
-    align-self: flex-start ;
+    background: white;
+    border: 1px solid black;
+    border-radius: 10%;
+    align-self: flex-start;
 }
 
-h3 {
-    margin: 2px 0 ;
-}
 
 .bottom-nav {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
+    color: white ;
+    background: black ;
+    align-items: flex-end ;
+    align-content: flex-end ;   
+    height: 20px ;
+    bo
+}
+
+.bottom-nav a:link {
+    color: white ;
+}
+
+.bottom-nav a:visited {
+    color: white ;
 }
